# open-compute

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LIVE_SMOKE_RUNBOOK.md  README.md  README_de.md  RELEASE_GATE.md  ROADMAP.md  SECURITY.md  SKILL.md  TODO.md  ellmos-module.v2.json  llms.txt  pyproject.toml
.github/workflows/: tests.yml
open_compute/: __init__.py  actions.py  cli.py  config.py  coordinates.py  feed_manager.py  learning.py  loop.py  mcp_i18n.py  mcp_server.py  perception.py  safety.py
open_compute/backends/: __init__.py  base.py  claude.py  factory.py  mock.py  openai.py
open_compute/clirec/: __init__.py  format.py  recorder.py  replay.py  segment.py  uia_probe.py
open_compute/clirec/capture/: __init__.py  base.py  mock.py  pynput_backend.py  winapi.py
open_compute/drivers/: __init__.py  base.py  local.py  mock.py  wgc.py
open_compute/feeds/: __init__.py  base.py  dirwatch.py  registry.py  screenshot.py  uia_windows.py
skills/clirec/: SKILL.md
tests/: test_actions.py  test_backends.py  test_clirec_backends_smoke.py  test_clirec_capture.py  test_clirec_cli.py  test_clirec_config.py  test_clirec_external_adapter.py  test_clirec_format.py  test_clirec_recorder.py  test_clirec_replay.py  test_clirec_segment.py  test_clirec_skill_doc.py  test_clirec_uia_probe.py  test_coordinates.py  test_dirwatch.py  test_feed_manager.py  test_feeds.py  test_fullres_and_capture_window.py  test_hold_and_window_tools.py  test_learning.py  test_local_executor.py  test_loop.py  test_mcp_i18n.py  test_mcp_server.py  test_phase1.py  test_safety.py  test_safety_gating_fixes.py  test_uia_window_scoping.py
